<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/material_color_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chan.example.lookatme.activity.start.JoinActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar_top"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView_profile"
        android:layout_below="@+id/toolBar_top"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_member_profile2"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <LinearLayout
        android:id="@+id/profile"
        android:layout_below="@id/imageView_profile"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/activity_join_textView_email"
                android:textColor="@color/material_color_black"
                android:layout_alignParentLeft="true"
                android:paddingLeft="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textView_email_check"
                android:layout_alignParentRight="true"
                android:paddingRight="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <com.chan.example.lookatme.function.ClearEditText
            android:id="@+id/editText_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/activity_join_editText_email_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/activity_join_textView_pwd"
                android:textColor="@color/material_color_black"
                android:layout_alignParentLeft="true"
                android:paddingLeft="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textView_pwd_check"
                android:layout_alignParentRight="true"
                android:paddingRight="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <com.chan.example.lookatme.function.ClearEditText
            android:id="@+id/editText_input_pwd"
            android:hint="@string/activity_join_editText_pwd_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/activity_join_textView_name"
                android:textColor="@color/material_color_black"
                android:layout_alignParentLeft="true"
                android:paddingLeft="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textView_name_check"
                android:layout_alignParentRight="true"
                android:paddingRight="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <com.chan.example.lookatme.function.ClearEditText
            android:id="@+id/editText_input_name"
            android:hint="@string/activity_join_editText_name_hint"
            android:inputType="text"
            android:singleLine="true"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_joinComplete"
        android:text="@string/activity_join_button_joinComplete"
        android:textColor="@color/material_color_white"
        android:textSize="18dp"
        android:textStyle="bold"
        android:background="@color/material_color_app_basic"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="70dp"/>

</RelativeLayout>
