<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/material_color_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chan.example.lookatme.activity.member.MemberPidActivity">

    <!-- toolBar : 맨 위에 위치한 툴바. -->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:theme="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:background="@color/material_color_white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
    </android.support.design.widget.AppBarLayout>

    <!--
      linearLayout_information1 : 상단에 위치한 이미지, 게시물수, 팔로워, 팔로잉, 프로필 수정을 감싸는 레이아웃
          imageView_profile : 프로필 이미지뷰.
          linearLayout_information1_1 : 이미지를 제외한 게시물수, 팔로워, 팔로잉, 프로필수정을 감싸는 레이아웃
              linearLayout_information1_1_1 : 게시물수, 팔로워, 팔로잉을 감싸는 레이아웃.
                  linearLayout_information1_1_1_1 : 게시물수 레이아웃.
                      textView_board_count : 게시물수를 나타내는 텍스트뷰.
                      textView_board_text : 게시물 텍스트.
                  linearLayout_information1_1_1_2 : 팔로워수 레이아웃.
                      textView_follower_count : 팔로워수를 나타내는 텍스트뷰.
                      textView_follower_text : 팔로워 텍스트.
                  linearLayout_information1_1_1_3 : 팔로잉수 레이아웃.
                      textView_following_count : 팔로잉수를 나타내는 텍스트뷰.
                      textView_following_text : 팔로잉 텍스트.
              button_follow_before : 팔로우 하기 버튼.
              button_follow_before : 팔로우 취소 버튼.
   -->
    <LinearLayout
        android:id="@+id/linearLayout_information1"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView_profile"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_member_profile2"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <LinearLayout
            android:id="@+id/linearLayout_information1_1"
            android:orientation="vertical"
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/linearLayout_information1_1_1"
                android:orientation="horizontal"
                android:layout_weight="3"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <LinearLayout
                    android:id="@+id/linearLayout_information1_1_1_1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textView_board_count"
                        android:text="@string/activity_memberpid_textView_basic_count"
                        android:textColor="@color/material_color_black"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/textView_board_text"
                        android:text="@string/activity_memberpid_textView_board_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearLayout_information1_1_1_2"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textView_follower_count"
                        android:text="@string/activity_memberpid_textView_basic_count"
                        android:textColor="@color/material_color_black"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/textView_follower_text"
                        android:text="@string/activity_memberpid_textView_follower_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearLayout_information1_1_1_3"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textView_following_count"
                        android:text="@string/activity_memberpid_textView_basic_count"
                        android:textColor="@color/material_color_black"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/textView_following_text"
                        android:text="@string/activity_memberpid_textView_following_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/button_follow_before"
                android:background="@drawable/button_border_round_follow_before"
                android:textColor="@color/material_color_white"
                android:text="@string/activity_memberpid_button_follow_before"
                android:visibility="gone"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
            <Button
                android:id="@+id/button_follow_after"
                android:background="@drawable/button_border_round_follow_after"
                android:textColor="@color/material_color_white"
                android:text="@string/activity_memberpid_button_follow_after"
                android:visibility="gone"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
            <Button
                android:id="@+id/button_follow_lookatme"
                android:background="@drawable/button_border_round_follow_after"
                android:textColor="@color/material_color_white"
                android:text="@string/activity_memberpid_button_follow_lookatme"
                android:visibility="visible"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_board_list"
        app:layoutManager="GridLayoutManager"
        app:spanCount="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>
