<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/material_color_purple_50"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chan.example.lookatme.activity.board_pid.BoardInsertActivity">

    <!-- toolBar : 맨 위에 위치한 툴바. -->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:theme="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:background="@color/material_color_white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearLayout_boardInsert_information"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--
        cardView_image_management : 대표 이미지, 서브 이미지들을 관리하는 카드뷰.
            linearLayout_image_management : 대표 이미지, 서브 이미지들을 관리하는 레이아웃.
                imageView_represent_img
                textView_represent_image_text
                linearLayout_sub_image_collection : 서브 이미지들과 텍스트를 관리하는 레이아웃.
                   relativeLayout_sub_image_1 : 서브 이미지1, 텍스트를 관리하는 레이아웃.
                       imageView_sub_image_1
                       textView_sub_image_1_text
                   relativeLayout_sub_image_2 : 서브 이미지2, 텍스트를 관리하는 레이아웃.
                       imageView_sub_image_2
                       textView_sub_image_2_text
                   relativeLayout_sub_image_3 : 서브 이미지, 텍스트를 관리하는 레이아웃.
                       imageView_sub_image_3
                       textView_sub_image_3_text
         -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardView_image_management"
            app:cardCornerRadius="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/linearLayout_image_management"
                android:padding="16dp"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imageView_represent_img"
                    android:src="@drawable/icon_square"
                    android:scaleType="fitXY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/textView_represent_image_text"
                    android:background="@color/material_color_white"
                    android:text="@string/activity_board_insert_textView_represent_image_text"
                    android:textColor="@color/material_color_black"
                    android:layout_margin="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:id="@+id/linearLayout_sub_image_collection"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:id="@+id/relativeLayout_sub_image_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/imageView_sub_image_1"
                            android:src="@drawable/icon_square_2"
                            android:scaleType="fitXY"
                            android:layout_width="100dp"
                            android:layout_height="100dp"/>
                        <TextView
                            android:id="@+id/textView_sub_image_1_text"
                            android:text="@string/activity_board_insert_textView_sub_image_1_text"
                            android:layout_alignLeft="@id/imageView_sub_image_1"
                            android:layout_alignRight="@id/imageView_sub_image_1"
                            android:layout_alignBottom="@id/imageView_sub_image_1"
                            android:layout_alignTop="@id/imageView_sub_image_1"
                            android:gravity="center"
                            android:textColor="@color/material_color_black"
                            android:layout_margin="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/relativeLayout_sub_image_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/imageView_sub_image_2"
                            android:src="@drawable/icon_square_2"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:scaleType="fitXY"
                            android:layout_width="100dp"
                            android:layout_height="100dp"/>
                        <TextView
                            android:id="@+id/textView_sub_image_2_text"
                            android:text="@string/activity_board_insert_textView_sub_image_2_text"
                            android:layout_alignLeft="@id/imageView_sub_image_2"
                            android:layout_alignRight="@id/imageView_sub_image_2"
                            android:layout_alignBottom="@id/imageView_sub_image_2"
                            android:layout_alignTop="@id/imageView_sub_image_2"
                            android:gravity="center"
                            android:textColor="@color/material_color_black"
                            android:layout_margin="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/relativeLayout_sub_image_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/imageView_sub_image_3"
                            android:src="@drawable/icon_square_2"
                            android:scaleType="fitXY"
                            android:layout_width="100dp"
                            android:layout_height="100dp"/>
                        <TextView
                            android:id="@+id/textView_sub_image_3_text"
                            android:text="@string/activity_board_insert_textView_sub_image_3_text"
                            android:layout_alignLeft="@id/imageView_sub_image_3"
                            android:layout_alignRight="@id/imageView_sub_image_3"
                            android:layout_alignBottom="@id/imageView_sub_image_3"
                            android:layout_alignTop="@id/imageView_sub_image_3"
                            android:gravity="center"
                            android:textColor="@color/material_color_black"
                            android:layout_margin="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView_contents_management"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/relativeLayout_contents_input"
                android:layout_width="match_parent"
                android:layout_height="190dp">
                <EditText
                    android:id="@+id/editText_contents_input"
                    android:layout_alignParentTop="true"
                    android:background="@null"
                    android:hint="@string/activity_board_insert_editText_contents_input_hint"
                    android:textColor="@color/material_color_black"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/textView_contents_text_count"
                    android:text="@string/activity_board_insert_textView_contents_text_count"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
    </ScrollView>


</LinearLayout>
